--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "type": "module",
   "version": "0.0.1",
   "scripts": {
-    "dev": "astro dev",
+    "dev": "astro dev --host --open",
     "build": "astro build",
-    "preview": "astro preview",
+    "preview": "astro preview --host --open",
     "astro": "astro"
   },
   "dependencies": {
