--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "@astrojs/sitemap": "^3.6.0",
     "@tailwindcss/vite": "^4.1.18",
     "astro": "^5.16.6",
+    "prettier": "^3.7.4",
+    "prettier-plugin-astro": "^0.14.1",
+    "prettier-plugin-tailwindcss": "^0.7.2",
     "sharp": "^0.34.3",
     "tailwindcss": "^4.1.18"
   }
