--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "@lucide/astro": "^0.562.0",
     "@tailwindcss/vite": "^4.1.18",
     "astro": "^5.16.6",
+    "mdast-util-to-string": "^4.0.0",
     "prettier": "^3.7.4",
     "prettier-plugin-astro": "^0.14.1",
     "prettier-plugin-tailwindcss": "^0.7.2",
+    "reading-time": "^1.5.0",
     "sharp": "^0.34.3",
     "tailwindcss": "^4.1.18"
   }
