--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@lucide/astro": "^0.562.0",
     "@tailwindcss/vite": "^4.1.18",
     "astro": "^5.16.6",
+    "class-variance-authority": "^0.7.1",
     "mdast-util-to-string": "^4.0.0",
     "prettier": "^3.7.4",
     "prettier-plugin-astro": "^0.14.1",
