--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@tailwindcss/vite": "^4.1.18",
     "astro": "^5.16.6",
     "class-variance-authority": "^0.7.1",
+    "date-fns": "^4.1.0",
     "mdast-util-to-string": "^4.0.0",
     "prettier": "^3.7.4",
     "prettier-plugin-astro": "^0.14.1",
