--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
     "reading-time": "^1.5.0",
     "sharp": "^0.34.3",
     "tailwindcss": "^4.1.18"
+  },
+  "devDependencies": {
+    "@tailwindcss/typography": "^0.5.19"
   }
 }
